@@ -37,6 +37,7 @@
                 <xs:element name="retired" type="xs:boolean"/>
                 <xs:element name="trashed"  type="xs:boolean"/>
                 <xs:element name="read_only"  type="xs:boolean"/>
+                <xs:element name="tag" type="xs:string" minOccurs="0" maxOccurs="unbounded"/>
                 <xs:element name="contrib" minOccurs="0" maxOccurs="unbounded">
                     <xs:complexType>
                         <xs:sequence>
