@@ -12,6 +12,10 @@ Added tags to stories for classification and searching. [Michael Peters]
 
 =item *
 
+Added tags to media for classification and searching. [Michael Peters]
+
+=item *
+
 Fixed bug where a user being in a group with admin_user_limited perms
 would be given full admin_user access if they were in another group
 with neither admin_user nor admin_user_limited perms. [Brad Oaks]
